--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0"?>
-<project
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
 	<modelVersion>4.0.0</modelVersion>
@@ -18,11 +17,14 @@
 
 	<properties>
 		<java-package-name>ftclient</java-package-name>
-		<java-package-main-class-name>ExistExpathFTClientModule</java-package-main-class-name>
 		<module-prefix>ft-client</module-prefix>
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.exist-db</groupId>
+			<artifactId>exist-core</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>ro.kuberam.libs.java</groupId>
 			<artifactId>ft-client</artifactId>
