--- a/pom.xml
+++ b/pom.xml
@@ -4,31 +4,30 @@
 
 	<modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<groupId>ro.kuberam.expath.exist</groupId>
-		<artifactId>base</artifactId>
-		<version>1.5.3</version>
-	</parent>
-
-	<artifactId>ft-client</artifactId>
-	<version>1.1.5</version>
+        <groupId>org.expath.exist</groupId>
+	<artifactId>exist-ft-client</artifactId>
+	<version>2.0.0</version>
 	<name>eXist wrapper for EXPath File Transfer Client module</name>
 	<url>http://expath.org</url>
 
 	<properties>
 		<java-package-name>ftclient</java-package-name>
 		<module-prefix>ft-client</module-prefix>
+		<exist.version>5.0.0</exist.version>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.exist-db</groupId>
 			<artifactId>exist-core</artifactId>
+			<version>${exist.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>ro.kuberam.libs.java</groupId>
 			<artifactId>ft-client</artifactId>
-			<version>1.1.2</version>
+			<version>2.0.0</version>
 			<type>jar</type>
 			<scope>provided</scope>
 		</dependency>
